--- a/work/index.html
+++ b/work/index.html
@@ -135,7 +135,7 @@
           </div>
           <div class="label_section">
             <label class="label_text" for="email">メールアドレス
-            <span class=required>※</span>
+            <span class="required">※</span>
             </label>
             <input class="input_area" id="email" type="email" autocomplete="email" required>
           </div>
